--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,3 @@
-{{form-fields}}
-
+{{form-fields fetchSubjects="fetchSubjects" subjectData=model.subjectData}}
 {{!-- {{fill-questions}} --}}
 {{outlet}}
