--- a/app/templates/components/fill-questions.hbs
+++ b/app/templates/components/fill-questions.hbs
@@ -1,1 +1,30 @@
-{{yield}}
+<div class="title">
+    part-A
+</div>
+<div class="add-ques" onclick={{action 'add' 'A'}}>Add</div>
+{{#each twoMark as |ques|}}
+
+{{/each}}
+
+<div class="title">
+    part-B
+</div>
+<div class="add-ques" onclick={{action 'add' 'B'}}>Add</div>
+{{#each eightMark as |ques|}}
+
+{{/each}}
+
+<div class="title">
+    part-C
+</div>
+<div class="add-ques" onclick={{action 'add' 'C'}}>Add</div>
+{{#each sixteenMark as |ques|}}
+
+{{/each}}
+
+<div class="ui longer modal">
+  <div class="header">Header</div>
+  <div class="scrolling content">
+    <p>Very long content goes here</p>
+  </div>
+</div>
