--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,3 @@
 {{form-fields fetchSubjects="fetchSubjects" subjectData=model.subjectData}}
-{{!-- {{fill-questions}} --}}
+{{fill-questions}}
 {{outlet}}
