--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,12 @@
 .form-transition{
-    
+    padding-bottom: 24px;
+}
+
+.ui.message{
+    padding-bottom:40px;
+}
+
+.ui.message > button {
+    float: right;
+    padding-bottom: 8px;
 }
